--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test" : "mocha --exit"
+    "test": "mocha --exit"
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
@@ -12,12 +12,16 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "https": "^1.0.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
-    "morgan": "~1.9.0"
+    "morgan": "^1.9.1",
+    "node-gyp": "^3.8.0",
+    "node-pre-gyp": "^0.11.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "chai-http": "^4.2.0"
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
