--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "https": "^1.0.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.3.7",
     "morgan": "^1.9.1",
     "node-gyp": "^3.8.0",
     "node-pre-gyp": "^0.11.0"
