--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "mongoose": "^5.3.7",
     "morgan": "^1.9.1",
     "node-gyp": "^3.8.0",
-    "node-pre-gyp": "^0.11.0"
+    "node-pre-gyp": "^0.11.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
